--- a/view/IndexController/chatAktion.css
+++ b/view/IndexController/chatAktion.css
@@ -1,76 +1,93 @@
-@charset "UTF-8";
+@charset "UTF-8"; /*Top-Bar*/
+
 #bar {
-    height: 50px;
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    padding-left: 10px;
+  height: 50px;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  padding-left: 10px;
 }
 #barFixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;background-color: #333;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-     z-index: 1;
-     padding: 0 .5em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #333;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  z-index: 1;
+  padding: 0 0.5em;
 }
 #title {
-    color: #116ec5;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+  color: #116ec5;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
-#mode {
-    font-size: 24px;
-    margin-left: auto;
-    padding-right: 1em;
-}
+
+/*Message-Box*/
 #chatBox {
-    height: 500px;
-    overflow-y: scroll;
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-    margin-top: 60px;
-    font-family: Arial, sans-serif;
-    border-radius: 5px;
-}
+height: 700px;
+  overflow-y: scroll;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 60px;
+  font-family: Arial, sans-serif;
+  border-radius: 5px;
+} /*Input*/
 
 #chatBox span{
     font-size: x-small;
+    font-style: italic;
 }
 
+#inputField {
+  display: flex;
+  row-gap: 5px;
+  flex-direction: column;
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+}
+
+#inputFieldMsg {
+  display: flex;
+}
 
 #username {
-    display: block;
-    padding: 5px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  display: block;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: fit-content;
+  color: #116ec5;
+  font-weight: bold;
 }
 #text {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;}
-button {
-        background-color: #116ec5;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  margin-right: 15px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-weight: bold;
 }
-button:hover {
-    background-color: #2e7dc7;
+#sendButton {
+  margin-right: 17px;
+  background-color: #116ec5;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: bold;
+}
+#sendButton:hover {
+  background-color: #3e94e4;
 }
